[project]
name = "llm-app-codes"
version = "0.1.0"
description = ""
authors = [
    {name = "waki41",email = "waki@forqued.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (>=1.45.0,<2.0.0)",
    "openai (>=1.77.0,<2.0.0)",
    "langchain-core (>=0.3.58,<0.4.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langchain-anthropic (>=0.3.12,<0.4.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
